--- a/config-template.json
+++ b/config-template.json
@@ -1,13 +1,13 @@
 {
-  "open_ai_api_key": "YOUR API KEY",
+  "open_ai_api_key": "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",
   "model": "gpt-3.5-turbo",
   "proxy": "",
   "use_azure_chatgpt": false,
   "single_chat_prefix": ["bot", "@bot"],
   "single_chat_reply_prefix": "[bot] ",
   "group_chat_prefix": ["@bot"],
-  "group_name_white_list": ["ChatGPT测试群", "ChatGPT测试群2"],
-  "group_chat_in_one_session": ["ChatGPT测试群"],
+  "group_name_white_list": ["众筹到现在一分钱没见"],
+  "group_chat_in_one_session": ["众筹到现在一分钱没见"],
   "image_create_prefix": ["画", "看", "找"],
   "speech_recognition": false,
   "group_speech_recognition": false,
